src/test/ui/qualified/qualified-path-params.stderr
error[E0533]: expected unit struct/variant or constant, found method `<<S as Tr>::A>::f<u8>`
  --> $DIR/qualified-path-params.rs:20:9
   |
LL |         <S as Tr>::A::f::<u8> => {}
   |         ^^^^^^^^^^^^^^^^^^^^^

error[E0029]: only char and numeric types are allowed in range patterns
  --> $DIR/qualified-path-params.rs:22:15
   |
LL |         0 ..= <S as Tr>::A::f::<u8> => {}
   |               ^^^^^^^^^^^^^^^^^^^^^ ranges require char or numeric types
   |
   = note: start type: {integer}
   = note: end type: fn() {S::f::<u8>}

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0029`.
